# Housecorr3D-v2

./: .gitignore  .gitmodules  .gitmodules.bak  DATASETS.md  README.md  pyproject.toml  run.py
setup/: setup_slurm.sh  ssh_config
src/configs/ablation/category/densematcher/: animals.yaml  apple.yaml  backpack.yaml  banana.yaml  bell_pepper.yaml  broccoli.yaml  carrot.yaml  cars.yaml  celery.yaml  chairs.yaml  cucumber.yaml  egg.yaml  eggplant.yaml  knife.yaml  mushroom.yaml  onion.yaml  peach.yaml  pear.yaml  potato.yaml  (+3 more)
src/configs/ablation/feature_model/: mc16_vuni4_r256_fdiff3f.yaml  mc16_vuni4_r256_fdiff3f_allviews.yaml  mc16_vuni4_r256_fdinov2s.yaml  mc16_vuni4_r256_fdinov3b.yaml  mc16_vuni4_r256_fsiglip2.yaml  mc16_vuni4_r256_ftipsv2.yaml
src/configs/ablation/mesh_type/: mc32_vuni100_r256_fdiff3f.yaml  mc32_vuni100_r256_fdinov2s.yaml  mc32_vuni100_r256_fdm.yaml  mc32_vuni100_r256_fdmmv.yaml
src/configs/ablation/mesh_type_dm/: mc16_vuni100_r256_fdm.yaml
src/configs/ablation/real_syn/: real.yaml  syn.yaml
src/configs/bench/: dm_crsp3d_object_pair_nn.yaml  hc3d_crsp3d_object_pair_nn.yaml
src/housecorr3dv2/: cli.py
src/housecorr3dv2/bench/: __init__.py  bench.py
src/housecorr3dv2/bench/frame_object_pair_bench/: __init__.py  bench.py
src/housecorr3dv2/bench/object_pair_bench/: __init__.py  bench.py
src/housecorr3dv2/method/: __init__.py  method.py
src/housecorr3dv2/method/default/: __init__.py  method.py
src/housecorr3dv2/method/functional_maps/: __init__.py  method.py
tests/: test_densematcher_features.py  test_mesh_to_pytorch3d.py
(+53 files in other folders)
